--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
   });
 
 
-  /* =========================== Utility Functions / Time (FIXED: ensured periodic update is active) =========================== */
+  /* =========================== Utility Functions / Time (MODIFIED) =========================== */
   function getIndoGreeting(hour) {
     if (hour >= 4 && hour < 11) return (translations.id['Pagi'] || 'Pagi');
     if (hour >= 11 && hour < 15) return (translations.id['Siang'] || 'Siang');
@@ -1343,18 +1343,18 @@
     const timeDisplay = document.getElementById('timeDisplay');
     const now = new Date();
 
-    // Timezone: Jakarta (WIB, UTC+7) - Placeholder for simplicity
-    const jakartaTime = new Date(now.toLocaleString("en-US", { timeZone: "Asia/Jakarta" }));
+    // Timezone: Sydney (AEST, UTC+10/UTC+11)
+    const sydneyTime = new Date(now.toLocaleString("en-US", { timeZone: "Australia/Sydney" }));
     const options = { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true }; // Added 'second' for visual confirmation of movement
-    const formattedTime = jakartaTime.toLocaleString('en-US', options);
-    const currentHour = jakartaTime.getHours();
+    const formattedTime = sydneyTime.toLocaleString('en-US', options);
+    const currentHour = sydneyTime.getHours(); // Use Sydney time for greeting
     const lang = langSelect.value;
     
     if (lang === 'id') {
       const greeting = getIndoGreeting(currentHour);
-      timeDisplay.textContent = `${greeting}, ${jakartaTime.toLocaleString('id-ID', options)} WIB`;
+      timeDisplay.textContent = `${greeting}, ${sydneyTime.toLocaleString('id-ID', options)} AEST`;
     } else {
-      timeDisplay.textContent = `Server Time (WIB): ${formattedTime}`;
+      timeDisplay.textContent = `Server Time (AEST): ${formattedTime}`;
     }
 
     // Update news based on saved local storage content
