--- a/index.html
+++ b/index.html
@@ -938,14 +938,14 @@
           updated: '2025-10-20',
           changelog: '- Surge 5 config updated.',
           filename: 'GrowFax_ios_config.txt',
-          copytext: '[Rule]\nHOST,growfax.com,DIRECT'
+          copytext: 'growfax.web.id' // <--- MODIFIED
       },
       powertunnel: {
           version: '1.1.0',
           updated: '2025-09-15',
           changelog: '- PowerTunnel config for DNS bypassing.',
           filename: 'PowerTunnel_Host.txt',
-          copytext: '192.168.1.1 growfax.com'
+          copytext: 'growfax.web.id' // <--- MODIFIED
       }
   };
 
