--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
       "👑 Admin Server Role": "👑 Peran Admin Server", "Can sell role": "Bisa menjual peran", "Benefit for selling roles to players.": "Keuntungan dari menjual peran kepada pemain.", "Can sell title": "Bisa menjual gelar", "Benefit for selling custom titles to players.": "Keuntungan dari menjual gelar kustom kepada pemain.", "Can sell All item with Real Trade": "Bisa menjual semua item dengan Real Trade", "Allows selling all in-game items via Real Trade system.": "Memungkinkan menjual semua item dalam game melalui sistem Real Trade.", 
       // Time Ago & Welcome
       "Set your preferred language and theme. We'll remember this for next time.": "Atur bahasa dan tema pilihan Anda. Kami akan mengingatnya untuk kunjungan berikutnya.", "Language": "Bahasa", "Theme": "Tema", "Save & Continue": "Simpan & Lanjutkan", "Skip": "Lewati", "Pagi": "Pagi", "Siang": "Siang", "Sore": "Sore", "Malam": "Malam", " ago": " yang lalu", "minute": ["menit"], "hour": ["jam"], 
-      "day": ["hari"], "month": ["bulan"], "year": ["tahun"], "now": "baru saja" 
+      "day": ["hari"], "bulan": ["bulan"], "year": ["tahun"], "now": "baru saja" 
     } 
   };
   
