--- a/index.html
+++ b/index.html
@@ -1396,19 +1396,26 @@ const FILE_META = {
     version: "v1.1.0",
     updated: "2025-10-25",
     changelog: "Added support for Surge 5.",
-    copytext: `[Rule]
-DOMAIN-SUFFIX,growtopia1.com,REJECT
-DOMAIN-SUFFIX,growtopia2.com,REJECT
+    copytext: `[General]
+bypass-system = true
+
+[Rule]
+FINAL,DIRECT
+
 [Host]
-growtopia1.com = 103.27.206.183
-growtopia2.com = 103.27.206.183`
+growtopia1.com = 91.134.85.13
+growtopia2.com = 91.134.85.13
+www.growtopia1.com = 91.134.85.13
+www.growtopia2.com = 91.134.85.13`
   },
   powertunnel: {
     version: "v2.0.0",
     updated: "2025-10-25",
     changelog: "Optimized for PowerTunnel v2.",
-    copytext: `103.27.206.183 growtopia1.com
-103.27.206.183 growtopia2.com`
+    copytext: `15.235.232.75 growtopia1.com
+15.235.232.75 growtopia2.com
+15.235.232.75 www.growtopia1.com
+15.235.232.75 www.growtopia2.com`
   }
 };
 
